sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:4: error: not found: value getNombreValeur
  var N : Int = getNombreValeur-1
                ^