sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2()  {
  var Swap : Boolean = true
  var N : Int = getNombreValeur-1
  while (Swap == true) {
    Swap = false
    for(i <- 0 to N-1) {
      if (!plusPetit(i,i+1)) {
        Swap = true
        echange(i,i+1)
      }
    }
    N -= 1
  }
}